--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -18,6 +18,7 @@
     "@pankod/refine-mui": "^3.45.2",
     "@pankod/refine-react-hook-form": "^3.33.2",
     "@pankod/refine-react-table": "^4.7.2",
+    "@pankod/refine-mantine": "^1.2.0",
     "lz-string": "^1.4.4",
     "next": "^12.1.6",
     "react": "^18.0.0",
