--- a/examples/dataProvider/supabase/package.json
+++ b/examples/dataProvider/supabase/package.json
@@ -18,7 +18,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true PORT=3002 react-scripts start",
+    "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "eject": "react-scripts eject"
   },
