--- a/examples/fineFoods/admin/mui/package.json
+++ b/examples/fineFoods/admin/mui/package.json
@@ -3,14 +3,15 @@
     "version": "3.25.0",
     "private": true,
     "dependencies": {
+        "@googlemaps/react-wrapper": "^1.1.35",
+        "@types/google.maps": "^3.50.4",
         "@pankod/refine-core": "^3.81.0",
         "@pankod/refine-mui": "^3.50.5",
+        "@pankod/refine-kbar": "0.10.2",
         "@pankod/refine-react-hook-form": "^3.33.2",
         "@pankod/refine-react-router-v6": "^3.36.0",
         "@pankod/refine-react-table": "^4.7.6",
         "@pankod/refine-simple-rest": "^3.31.0",
-        "@pankod/refine-kbar": "0.10.2",
-        "@types/google-map-react": "^2.1.7",
         "@types/node": "^12.20.11",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
