--- a/examples/fineFoods/admin/antd/package.json
+++ b/examples/fineFoods/admin/antd/package.json
@@ -3,6 +3,8 @@
 	"version": "3.25.0",
 	"private": true,
 	"dependencies": {
+		"@googlemaps/react-wrapper": "^1.1.35",
+		"@types/google.maps": "^3.50.4",
 		"@ant-design/charts": "^1.2.0",
 		"@ant-design/graphs": "^1.2.7",
 		"@craco/craco": "^6.1.2",
@@ -14,7 +16,6 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^14.1.1",
-		"@types/google-map-react": "^2.1.7",
 		"@types/jest": "^26.0.24",
 		"@types/node": "^12.20.11",
 		"@types/react": "^18.0.0",
