--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Discussions
-    url: https://discord.com/invite/refine
+    url: https://discord.gg/refine
     about: If you have any doubts related to the project or want to discuss something, then join our Discord server
