feat(chakra): add base layout components

--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -44,8 +44,10 @@
         "@pankod/refine-ui-types": "^0.11.5",
         "@pankod/refine-react-hook-form": "^3.33.2",
         "@chakra-ui/react": "^2.3.6",
-        "@emotion/react": "^11.10.4",
-        "@emotion/styled": "^11.10.4",
+        "@chakra-ui/icons": "^2.0.11",
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "framer-motion": "^7.5.3",
         "dayjs": "^1.10.7",
         "lodash-es": "^4.17.21",
         "lodash": "^4.17.21",
