--- a/packages/antd-audit-log/package.json
+++ b/packages/antd-audit-log/package.json
@@ -22,7 +22,7 @@
         "react": "^17.0.0 || ^18.0.0",
         "react-dom": "^17.0.0 || ^18.0.0"
     },
-    "author": "Pankod",
+    "author": "refine",
     "module": "dist/esm/index.js",
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.4",
