--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -55,7 +55,7 @@
         "sunflower-antd": "1.0.0-beta.3",
         "tslib": "^2.3.1"
     },
-    "author": "Pankod",
+    "author": "refine",
     "license": "MIT",
     "gitHead": "829f5a516f98c06f666d6be3e6e6099c75c07719",
     "repository": {
