--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,7 +57,7 @@
         "url": "https://github.com/refinedev/refine.git",
         "directory": "packages/core"
     },
-    "author": "Pankod",
+    "author": "refine",
     "license": "MIT",
     "gitHead": "17dd5af3e4c9f7f09e1e707362c6f5a9d1cab8a8",
     "publishConfig": {
