--- a/packages/demo-sidebar/package.json
+++ b/packages/demo-sidebar/package.json
@@ -24,7 +24,7 @@
         "react": "^17.0.0 || ^18.0.0",
         "react-dom": "^17.0.0 || ^18.0.0"
     },
-    "author": "Pankod",
+    "author": "refine",
     "module": "dist/esm/index.js",
     "devDependencies": {
         "@pankod/refine-core": "^3.67.0",
