--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -53,7 +53,7 @@
         "@tabler/icons": "^1.1.0",
         "tslib": "^2.3.1"
     },
-    "author": "Pankod",
+    "author": "refine",
     "license": "MIT",
     "gitHead": "829f5a516f98c06f666d6be3e6e6099c75c07719",
     "repository": {
