--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -58,7 +58,7 @@
         "warn-once": "^0.1.0",
         "tslib": "^2.3.1"
     },
-    "author": "Pankod",
+    "author": "refine",
     "license": "MIT",
     "gitHead": "829f5a516f98c06f666d6be3e6e6099c75c07719",
     "publishConfig": {
