--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -19,7 +19,7 @@
     "test": "jest --passWithNoTests --runInBand",
     "prepare": "npm run build"
   },
-  "author": "Pankod",
+  "author": "refine",
   "module": "dist/esm/index.js",
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
