--- a/packages/strapi-v4/package.json
+++ b/packages/strapi-v4/package.json
@@ -26,7 +26,7 @@
     "@types/react": "^17.0.0 || ^18.0.0",
     "@types/react-dom": "^17.0.0 || ^18.0.0"
   },
-  "author": "Pankod",
+  "author": "refine",
   "module": "dist/esm/index.js",
   "devDependencies": {
     "@pankod/refine-core": "^3.86.0",
