--- a/packages/ui-types/package.json
+++ b/packages/ui-types/package.json
@@ -29,7 +29,7 @@
         "dayjs": "^1.10.7",
         "tslib": "^2.3.1"
     },
-    "author": "Pankod",
+    "author": "refine",
     "license": "MIT",
     "gitHead": "829f5a516f98c06f666d6be3e6e6099c75c07719",
     "publishConfig": {
