build: update next action

--- a/.github/workflows/next-push.yml
+++ b/.github/workflows/next-push.yml
@@ -57,6 +57,7 @@ jobs:
           title: "ci(changesets): next version packages"
           createGithubReleases: false
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   documentation-live-preview:
