--- a/examples/base/chakra-ui/package.json
+++ b/examples/base/chakra-ui/package.json
@@ -12,6 +12,7 @@
         "@pankod/refine-react-router-v6": "^3.36.2",
         "@pankod/refine-simple-rest": "^3.34.0",
         "@pankod/refine-react-table": "^4.8.0",
+        "@pankod/refine-react-hook-form": "^3.33.2",
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
     },
