--- a/examples/authProvider/aws_cognito/package.json
+++ b/examples/authProvider/aws_cognito/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refine-auth0-example",
+  "name": "refine-awscognito-example",
   "version": "3.25.0",
   "private": true,
   "dependencies": {
@@ -8,17 +8,19 @@
     "@pankod/refine-core": "^3.86.0",
     "@pankod/refine-react-router-v6": "^3.36.2",
     "@pankod/refine-simple-rest": "^3.35.0",
-    "@types/node": "^12.20.11",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "aws-amplify": "^4.3.39"
-    "axios": "^0.26.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^6.0.1",
     "react-mde": "^11.1.0",
     "react-scripts": "^5.0.0",
-    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/node": "^12.20.10",
+    "typescript": "^4.7.4",
+    "react-axios": "^2.0.6"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
