--- a/examples/authProvider/aws_cognito/package.json
+++ b/examples/authProvider/aws_cognito/package.json
@@ -8,7 +8,7 @@
     "@pankod/refine-core": "^3.86.0",
     "@pankod/refine-react-router-v6": "^3.36.2",
     "@pankod/refine-simple-rest": "^3.35.0",
-    "aws-amplify": "^4.3.39"
+    "aws-amplify": "^4.3.39",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^6.0.1",
