docs(blog): add react context post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -153,3 +153,8 @@ muhammad_khabbab:
     name: Muhammad Khabbab
     title: Project Manager
     image_url: /img/generic-profile.png
+
+chibuzor_otuokwu:
+    name: Chibuzor Otuokwu
+    title: Software Developer
+    image_url: /img/generic-profile.png
