--- a/examples/base/chakra-ui/package.json
+++ b/examples/base/chakra-ui/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@pankod/refine-chakra-ui": "^0.0.1",
+        "@tabler/icons": "^1.1.0",
         "@pankod/refine-core": "^3.85.0",
         "@pankod/refine-react-router-v6": "^3.36.2",
         "@pankod/refine-simple-rest": "^3.34.0",
