--- a/documentation/package.json
+++ b/documentation/package.json
@@ -35,6 +35,7 @@
         "react-player": "^2.10.1",
         "react-rewards": "^2.0.4",
         "react-share": "^4.4.0",
+        "react-use-cookie": "^1.4.0",
         "tailwindcss": "^3.1.8"
     },
     "browserslist": {
