--- a/documentation/package.json
+++ b/documentation/package.json
@@ -54,6 +54,7 @@
         "@docusaurus/module-type-aliases": "^2.1.0",
         "@tsconfig/docusaurus": "^1.0.4",
         "@types/fs-extra": "^9.0.13",
+        "@types/gtag.js": "^0.0.12",
         "@types/react": "^17.0.19",
         "@types/react-helmet": "^6.1.2",
         "@types/react-router-dom": "^5.1.8",
