--- a/packages/saas-ui/package.json
+++ b/packages/saas-ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pankod/refine-saas-ui",
-    "version": "1.9.2",
+    "version": "0.1.0",
     "description": "refine is a React-based framework for building internal tools, rapidly.",
     "private": false,
     "main": "dist/index.js",
@@ -41,12 +41,14 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "@emotion/react": "^11.8.2",
         "@chakra-ui/react": "^2.3.6",
         "@saas-ui/react": "^1.5.0",
         "@saas-ui/app-shell": "^0.2.0",
         "@saas-ui/sidebar": "^0.3.0",
         "@pankod/refine-ui-types": "^0.14.0",
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "framer-motion": "^7.5.3",
         "dayjs": "^1.10.7",
         "react-markdown": "^6.0.1",
         "remark-gfm": "^1.0.0",
