docs(blog): add author profile

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -118,7 +118,7 @@ joseph_mawa:
     name: Joseph Mawa
     title: Web Developer
     url: https://github.com/nibble0101
-    image_url: https://media-exp1.licdn.com/dms/image/C4E03AQHSDUpc44g0WA/profile-displayphoto-shrink_800_800/0/1610367557179?e=1667433600&v=beta&t=ZKdvXFLajKeMPl16UvLAEudKGgpLq4cVjqI2iFhDmTI
+    image_url: /img/generic-profile.png
 
 joel_ezimorah:
     name: Joel Ezimorah
