--- a/examples/fineFoods/admin/antd/package.json
+++ b/examples/fineFoods/admin/antd/package.json
@@ -32,7 +32,7 @@
 		"react-i18next": "^11.8.11",
 		"react-input-mask": "^2.0.4",
 		"react-markdown": "^6.0.1",
-		"react-mde": "^11.1.0",
+		"@uiw/react-md-editor": "^3.19.5",
 		"react-scripts": "^5.0.0",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4"
