--- a/packages/saas-ui/package.json
+++ b/packages/saas-ui/package.json
@@ -13,6 +13,7 @@
         "prepare": "npm run build"
     },
     "peerDependencies": {
+        "@pankod/refine-chakra-ui": "^1.2.0",
         "@pankod/refine-core": "^3.58.3",
         "@types/react": "^17.0.0 || ^18.0.0",
         "@types/react-dom": "^17.0.0 || ^18.0.0",
