--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -14,6 +14,8 @@
     },
     "peerDependencies": {
         "@pankod/refine-core": "^3.86.2",
+        "@chakra-ui/react": "^2.3.6",
+        "dayjs": "^1.10.7",
         "react": "^17.0.0 || ^18.0.0",
         "react-dom": "^17.0.0 || ^18.0.0"
     },
