docs(blog): add nvm post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -158,3 +158,9 @@ chibuzor_otuokwu:
     name: Chibuzor Otuokwu
     title: Software Developer
     image_url: /img/generic-profile.png
+
+chidume_nnamdi:
+    name: Chidume Nnamdi
+    title: Software Engineer
+    url: https://github.com/philipszdavido
+    image_url: https://github.com/philipszdavido.png
