--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -14,6 +14,11 @@
     },
     "peerDependencies": {
         "@pankod/refine-core": "^3.58.3",
+        "@mantine/core": "^5.5.6",
+        "@mantine/hooks": "^5.5.6",
+        "@mantine/form": "^5.5.6",
+        "@mantine/notifications": "^5.5.6",
+        "dayjs": "^1.10.7",
         "@types/react": "^17.0.0 || ^18.0.0",
         "@types/react-dom": "^17.0.0 || ^18.0.0",
         "react": "^17.0.0 || ^18.0.0",
@@ -42,10 +47,10 @@
     },
     "dependencies": {
         "@emotion/react": "^11.8.2",
-        "@mantine/core": "5.5.6",
-        "@mantine/hooks": "5.5.6",
-        "@mantine/form": "5.5.6",
-        "@mantine/notifications": "5.5.6",
+        "@mantine/core": "^5.5.6",
+        "@mantine/hooks": "^5.5.6",
+        "@mantine/form": "^5.5.6",
+        "@mantine/notifications": "^5.5.6",
         "@pankod/refine-ui-types": "^0.14.0",
         "dayjs": "^1.10.7",
         "react-markdown": "^6.0.1",
