--- a/packages/simple-rest/package.json
+++ b/packages/simple-rest/package.json
@@ -28,7 +28,8 @@
     "nock": "^13.1.3",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "tsup": "^5.11.13"
+    "tsup": "^5.11.13",
+    "warn-once": "^0.1.0"
   },
   "dependencies": {
     "axios": "^0.26.1",
