--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@pankod/refine-sdk",
+    "name": "@pankod/refine-cli",
     "version": "0.6.0",
-    "description": "refine sdk. refine is a React-based framework for building internal tools, rapidly. It ships with Ant Design System, an enterprise-level UI toolkit.",
+    "description": "refine is a React-based framework for building internal tools, rapidly. It ships with Ant Design System, an enterprise-level UI toolkit.",
     "private": false,
     "main": "dist/index.js",
     "module": "dist/esm/index.js",
@@ -32,7 +32,8 @@
         "nock": "^13.1.3"
     },
     "dependencies": {
-        "tslib": "^2.3.1"
+        "tslib": "^2.3.1",
+        "commander": "9.4.1"
     },
     "author": "refine",
     "license": "MIT",
