--- a/examples/base/antd/package.json
+++ b/examples/base/antd/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@pankod/refine-antd": "^3.62.0",
     "@pankod/refine-core": "^3.88.0",
+    "@pankod/refine-guesser": "0.1.0",
     "@pankod/refine-react-router-v6": "^3.36.2",
     "@pankod/refine-simple-rest": "^3.35.0",
     "@types/node": "^12.20.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "dayjs": "^1.10.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^6.0.1",
