--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,6 @@
         "test": "jest --passWithNoTests --runInBand",
         "prepare": "npm run build"
     },
-    "peerDependencies": {},
     "devDependencies": {
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@testing-library/jest-dom": "^5.16.4",
@@ -20,20 +19,27 @@
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
         "@types/jest": "^26.0.24",
-        "@types/testing-library__jest-dom": "^5.14.3",
         "@types/lodash": "^4.14.171",
+        "@types/shelljs": "^0.8.11",
+        "@types/testing-library__jest-dom": "^5.14.3",
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
+        "nock": "^13.1.3",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
-        "typescript": "^4.7.4",
-        "nock": "^13.1.3"
+        "typescript": "^4.7.4"
     },
     "dependencies": {
-        "tslib": "^2.3.1",
-        "commander": "9.4.1"
+        "commander": "9.4.1",
+        "ink": "^3.2.0",
+        "ink-table": "^3.0.0",
+        "ora": "^5.4.1",
+        "preferred-pm": "^3.0.3",
+        "react": "^18.2.0",
+        "shelljs": "^0.8.5",
+        "tslib": "^2.3.1"
     },
     "author": "refine",
     "license": "MIT",
