fix: add packages to devDependencies

--- a/packages/guesser/package.json
+++ b/packages/guesser/package.json
@@ -20,6 +20,7 @@
         "@pankod/refine-mui": "^3.55.0",
         "@pankod/refine-react-hook-form": "^3.33.2",
         "@pankod/refine-react-table": "^4.9.0",
+        "@tabler/icons": "^1.1.0",
         "@types/react": "^17.0.0 || ^18.0.0",
         "@types/react-dom": "^17.0.0 || ^18.0.0",
         "dayjs": "^1.10.7",
@@ -47,9 +48,20 @@
         },
         "dayjs": {
             "optional": true
-        }
+        },
+        "@tabler/icons": {
+            "optional": true
+        },
     },
     "devDependencies": {
+        "@pankod/refine-antd": "^3.62.0",
+        "@pankod/refine-chakra-ui": "^1.2.0",
+        "@pankod/refine-core": "^3.88.0",
+        "@pankod/refine-mantine": "^1.11.0",
+        "@pankod/refine-mui": "^3.55.0",
+        "@pankod/refine-react-hook-form": "^3.33.2",
+        "@pankod/refine-react-table": "^4.9.0",
+        "@tabler/icons": "^1.1.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
