--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,6 @@
         "@testing-library/user-event": "^14.1.1",
         "@types/jest": "^26.0.24",
         "@types/lodash": "^4.14.171",
-        "@types/shelljs": "^0.8.11",
         "@types/testing-library__jest-dom": "^5.14.3",
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
@@ -33,12 +32,12 @@
     },
     "dependencies": {
         "commander": "9.4.1",
+        "execa": "^5.1.1",
         "ink": "^3.2.0",
         "ink-table": "^3.0.0",
         "ora": "^5.4.1",
         "preferred-pm": "^3.0.3",
         "react": "^18.2.0",
-        "shelljs": "^0.8.5",
         "tslib": "^2.3.1"
     },
     "author": "refine",
