docs(blog): add next-13 post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -66,7 +66,7 @@ michael:
     name: Michael Hungbo
     title: Software Developer
     url: https://github.com/Mich45
-    image_url: https://pbs.twimg.com/profile_images/1476736258340794392/p7d1de3k_400x400.jpg
+    image_url: https://github.com/Mich45.png
 
 ekekenta_clinton:
     name: Ekekenta Clinton
