--- a/examples/base/mui/package.json
+++ b/examples/base/mui/package.json
@@ -3,6 +3,7 @@
     "version": "3.25.0",
     "private": true,
     "dependencies": {
+        "@pankod/refine-guesser": "^0.1.0",
         "@pankod/refine-core": "^3.88.0",
         "@pankod/refine-mui": "^3.55.0",
         "@pankod/refine-react-hook-form": "^3.33.2",
