--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,7 @@
     "module": "dist/esm/index.js",
     "typings": "dist/index.d.ts",
     "scripts": {
-        "start": "tsup --watch --format esm,cjs,iife --legacy-output",
+        "start": "tsup --watch --format esm,cjs,iife --legacy-output && cp templates dist/templates/",
         "build": "tsup --format esm,cjs,iife --minify --legacy-output",
         "test": "jest --passWithNoTests --runInBand",
         "prepare": "npm run build"
@@ -22,6 +22,8 @@
         "@types/jest": "^26.0.24",
         "@types/testing-library__jest-dom": "^5.14.3",
         "@types/lodash": "^4.14.171",
+        "@types/temp": "^0.9.1",
+        "@types/fs-extra": "^9.0.13",
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
         "identity-obj-proxy": "^3.0.0",
@@ -33,7 +35,10 @@
     },
     "dependencies": {
         "tslib": "^2.3.1",
-        "commander": "9.4.1"
+        "commander": "^9.4.1",
+        "handlebars": "^4.7.7",
+        "fs-extra": "^10.1.0",
+        "temp": "^0.9.4"
     },
     "author": "refine",
     "license": "MIT",
