--- a/packages/guesser/package.json
+++ b/packages/guesser/package.json
@@ -50,6 +50,13 @@
         }
     },
     "devDependencies": {
+        "@pankod/refine-antd": "^3.62.0",
+        "@pankod/refine-chakra-ui": "^1.2.10",
+        "@pankod/refine-core": "^3.88.4",
+        "@pankod/refine-mantine": "^1.11.4",
+        "@pankod/refine-mui": "^3.55.2",
+        "@pankod/refine-react-hook-form": "^3.33.2",
+        "@pankod/refine-react-table": "^4.9.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
