--- a/examples/base/mantine/package.json
+++ b/examples/base/mantine/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@pankod/refine-mantine": "^1.11.4",
     "@pankod/refine-core": "^3.88.4",
+    "@pankod/refine-guesser": "^0.1.0",
     "@pankod/refine-react-router-v6": "^3.36.2",
     "@pankod/refine-simple-rest": "^3.35.2",
     "@pankod/refine-react-table": "^4.9.0",
