feat: add mantine guesser (#2991)
* feat(mantine): add extra props to markdownfield component

* chore: add changeset

* feat: add code-viewer component

* feat: add error component for guesser

* feat(mantine): add loading component for guesser

* feat: add create and edit guesser for mantine

* feat: add getOptionLabel function to utils

* feat: add exports

* fix: add packages to devDependencies

* fix: edit guesser

* feat: add basicly list guesser

* feat: add list page guesser

* fix: update copy-code line number

* feat: use `dotAccessor` and fill up the multiple fields

* fix: use `dotAccessor` and add multiple.field support for relationRenders

* fix: `getValue` type

* feat(guesser): add multiple entrypoints

* feat(guesser): add separate type and exports for the package

* feat(guesser): mark name as optional for compliance

* feat(guesser): update props type

* feat(guesser): add types for easier inference

* feat(guesser): update demo imports

* feat(guesser): add demo to mantine base

Co-authored-by: Ali Emir Sen <senaliemir@gmail.com>

--- a/packages/guesser/package.json
+++ b/packages/guesser/package.json
@@ -6,6 +6,40 @@
     "main": "dist/index.js",
     "module": "dist/esm/index.js",
     "typings": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/esm/index.js",
+            "require": "./dist/index.js"
+        },
+        "./mantine": {
+            "import": "./dist/esm/mantine.js",
+            "require": "./dist/mantine.js"
+        },
+        "./antd": {
+            "import": "./dist/esm/antd.js",
+            "require": "./dist/antd.js"
+        },
+        "./mui": {
+            "import": "./dist/esm/mui.js",
+            "require": "./dist/mui.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            ".": [
+                "dist/index.d.ts"
+            ],
+            "mantine": [
+                "dist/guessers/mantine/index.d.ts"
+            ],
+            "antd": [
+                "dist/guessers/antd/index.d.ts"
+            ],
+            "mui": [
+                "dist/guessers/mui/index.d.ts"
+            ]
+        }
+    },
     "scripts": {
         "start": "tsup --watch --format esm,cjs,iife --legacy-output",
         "build": "tsup --format esm,cjs,iife --minify --legacy-output",
@@ -78,6 +112,7 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "@tabler/icons": "^1.1.0",
         "@pankod/refine-core": "^3.80.0",
         "dayjs": "^1.10.7",
         "lodash": "^4.17.21",
