--- a/packages/guesser/package.json
+++ b/packages/guesser/package.json
@@ -22,6 +22,10 @@
         "./mui": {
             "import": "./dist/esm/mui.js",
             "require": "./dist/mui.js"
+        },
+        "./chakra-ui": {
+            "import": "./dist/esm/chakra-ui.js",
+            "require": "./dist/chakra-ui.js"
         }
     },
     "typesVersions": {
@@ -37,6 +41,9 @@
             ],
             "mui": [
                 "dist/guessers/mui/index.d.ts"
+            ],
+            "chakra-ui": [
+                "dist/guessers/chakra-ui/index.d.ts"
             ]
         }
     },
