--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,7 @@
         "@types/lodash": "^4.14.171",
         "@types/temp": "^0.9.1",
         "@types/fs-extra": "^9.0.13",
+        "@types/jscodeshift": "^0.11.5",
         "@types/testing-library__jest-dom": "^5.14.3",
         "esbuild-copy-static-files": "^0.1.0",
         "esbuild-plugin-inline-image": "^0.0.8",
@@ -43,7 +44,8 @@
         "ink-table": "^3.0.0",
         "ora": "^5.4.1",
         "preferred-pm": "^3.0.3",
-        "react": "^18.0.0"
+        "react": "^18.0.0",
+        "jscodeshift": "^0.14.0"
     },
     "author": "refine",
     "license": "MIT",
