feat: Chakra UI guesser (#3010)
* feat(guesser): initialize chakra-ui

* feat(gueser): update default code viewer

* feat(guesser): fix mantine guesser

* feat: add guessers to chakra base example

* feat: add list guesser component

* fix: list guesser typo

* feat: add show guesser

* feat: add ErrorComponent

* feat: add loading component

* feat: add code-viewer component

* feat(guesser): fix missing element

* feat: add prettier package

* feat: add chakra edit guesser

* fix: increase modal width

* fix: list guesser issues

* fix: update chakra items

* fix: multiple relation with accessor in useMany

* fix: edit guesser issues

* fix: edit guesser issues

* fix: chakra show guesser

Co-authored-by: Ali Emir Sen <senaliemir@gmail.com>

--- a/packages/guesser/package.json
+++ b/packages/guesser/package.json
@@ -22,6 +22,10 @@
         "./mui": {
             "import": "./dist/esm/mui.js",
             "require": "./dist/mui.js"
+        },
+        "./chakra-ui": {
+            "import": "./dist/esm/chakra-ui.js",
+            "require": "./dist/chakra-ui.js"
         }
     },
     "typesVersions": {
@@ -37,6 +41,9 @@
             ],
             "mui": [
                 "dist/guessers/mui/index.d.ts"
+            ],
+            "chakra-ui": [
+                "dist/guessers/chakra-ui/index.d.ts"
             ]
         }
     },
@@ -122,6 +129,7 @@
         "react-markdown": "^6.0.1",
         "remark-gfm": "^1.0.0",
         "tslib": "^2.3.1",
+        "prettier": "^2.7.1",
         "react-live": "github:aliemir/react-live"
     },
     "author": "Refine",
