chore(cli): change imports to ts paths

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,7 +1,5 @@
 {
-    "include": [
-        "src"
-    ],
+    "include": ["src"],
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
         "rootDir": "./src",
@@ -10,16 +8,15 @@
         "importHelpers": false,
         "strict": true,
         "paths": {
-            "@services/*": [
-                "src/services/*"
-            ],
-            "@services": [
-                "src/services"
-            ],
+            "@definitions/*": ["src/definitions/*"],
+            "@definitions": ["src/definitions"],
+            "@utils/*": ["src/utils/*"],
+            "@utils": ["src/utils"],
+            "@commands/*": ["src/commands/*"],
+            "@commands": ["src/commands"],
+            "@components/*": ["src/components/*"],
+            "@components": ["src/components"]
         },
-        "typeRoots": [
-            "./src/types",
-            "../../node_modules/@types"
-        ]
+        "typeRoots": ["./src/types", "../../node_modules/@types"]
     }
 }
