--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
+        "@types/fs-extra": "^9.0.13",
         "@types/inquirer": "^8.2.5",
         "@types/jest": "^26.0.24",
         "@types/lodash": "^4.14.171",
