--- a/examples/inferencer/antd/package.json
+++ b/examples/inferencer/antd/package.json
@@ -18,7 +18,7 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true PORT=3000 react-scripts start",
         "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "eject": "react-scripts eject"
     },
