--- a/examples/inferencer/mui/package.json
+++ b/examples/inferencer/mui/package.json
@@ -19,7 +19,7 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "start": "FAST_REFRESH=false DISABLE_ESLINT_PLUGIN=true PORT=3003 react-scripts start",
         "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
         "eject": "react-scripts eject"
     },
