--- a/packages/live-previews/package.json
+++ b/packages/live-previews/package.json
@@ -20,6 +20,7 @@
     "@pankod/refine-react-table": "^4.7.2",
     "@pankod/refine-mantine": "^1.2.0",
     "@pankod/refine-chakra-ui": "^1.0.0",
+    "@pankod/refine-inferencer": "^0.1.0",
     "lz-string": "^1.4.4",
     "next": "^12.1.6",
     "react": "^18.0.0",
