--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:docs": "concurrently \"cd documentation && npm run start\" \"npm run start -- --scope @pankod/refine-live-previews\" --names docs,live --prefix-colors blue,red",
     "nuke:node_modules": "echo 'Removing all node_modules'; find . -name 'node_modules' -type d -prune -not -path './documentation/*' -exec rm -rf '{}' +",
     "nuke:builds": "echo 'Removing all builds/dists'; find ./packages -name 'dist' -type d -prune -not -path './documentation/*' -not -path '*/node_modules/*' -exec rm -rf '{}' +",
-    "nuke:lockfiles": "echo 'Removing all lockfiles'; find . \\( -name 'package-lock.json' -o -name 'yarn.lock' -o -name 'pnpm-lock.yaml' \\) -type f -prune -not -path './documentation/*' -not -path '**/node_modules/**' -exec rm -rf '{}' +",
+    "nuke:lockfiles": "echo 'Removing all lockfiles'; find ./packages \\( -name 'package-lock.json' -o -name 'yarn.lock' -o -name 'pnpm-lock.yaml' \\) -type f -prune -not -path './documentation/*' -not -path '**/codemod/**' -not -path '**/node_modules/**' -exec rm -rf '{}' +",
     "nuke": "echo 'Removing all node_modules, builds and lockfiles'; npm run nuke:node_modules; npm run nuke:builds; npm run nuke:lockfiles;",
     "coffee": "npm run nuke && npm i && npm run bootstrap && npm run build",
     "prepare": "husky install",
