--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,8 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
+        "@types/fs-extra": "^9.0.13",
+        "@types/inquirer": "^8.2.5",
         "@types/jest": "^26.0.24",
         "@types/lodash": "^4.14.171",
         "@types/testing-library__jest-dom": "^5.14.3",
@@ -30,13 +32,16 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "chalk": "^4.1.2",
         "commander": "9.4.1",
         "execa": "^5.1.1",
         "ink": "^3.2.0",
         "ink-table": "^3.0.0",
+        "inquirer": "^8.2.5",
         "ora": "^5.4.1",
         "preferred-pm": "^3.0.3",
         "react": "^18.0.0",
+        "semver-diff": "^3.1.1",
         "tslib": "^2.3.1"
     },
     "author": "refine",
