--- a/packages/inferencer/package.json
+++ b/packages/inferencer/package.json
@@ -99,6 +99,7 @@
         "@pankod/refine-react-hook-form": "^3.33.2",
         "@pankod/refine-react-table": "^4.9.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
+        "@types/react-test-renderer": "^18.0.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
@@ -114,6 +115,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
         "react-router-dom": "6.3.0",
+        "react-test-renderer": "^18.2.0",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4"
