--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,8 @@
     "dependencies": {
         "chalk": "^4.1.2",
         "commander": "9.4.1",
+        "conf": "^10.2.0",
+        "dotenv": "^16.0.3",
         "execa": "^5.1.1",
         "ink": "^3.2.0",
         "ink-table": "^3.0.0",
