feat: add generate command for refine-cli (#2983)
* feat: add base generate command

* feat: add base templates

* feat: add path option and copy compiled files

* feat: add project type utility

* refactor: move folder projectType utility

* refactor: move compile method to utils

* fix: remove unuse copy command

* refactor: add compileDir utility method

* feat: add uiFramework utils and pass compile method

* feat: add jscodeshift transformers file for resource create

* feat: add jscodeshift command

* feat: add resource prop

* refactor: resourceName to resource on resource templates

* fix: remove console

* fix: no resource prop for refine component

* refactor: run jscodeshift executable version

* fix: resource import space and remove jscodeshift stdout

* fix: destination full path

* refactor: destination variable

* fix: generate exist folder

* feat: support new resource definitaton types

* refactor: resource transformer

* refactor: update nextjs template

* refactor: update react-script template

* refactor: update remix template

* refactor: generate resource command

* fix: templates

* fix: jscodeshift path

* fix: update ignore-pattern for jscodemode

* fix: nextjs alias

* fix: pr reviews

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,5 +1,7 @@
 {
-    "include": ["src"],
+    "include": [
+        "src"
+    ],
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
         "rootDir": "./src",
@@ -8,15 +10,34 @@
         "importHelpers": false,
         "strict": true,
         "paths": {
-            "@definitions/*": ["src/definitions/*"],
-            "@definitions": ["src/definitions"],
-            "@utils/*": ["src/utils/*"],
-            "@utils": ["src/utils"],
-            "@commands/*": ["src/commands/*"],
-            "@commands": ["src/commands"],
-            "@components/*": ["src/components/*"],
-            "@components": ["src/components"]
+            "@definitions/*": [
+                "src/definitions/*"
+            ],
+            "@definitions": [
+                "src/definitions"
+            ],
+            "@utils/*": [
+                "src/utils/*"
+            ],
+            "@utils": [
+                "src/utils"
+            ],
+            "@commands/*": [
+                "src/commands/*"
+            ],
+            "@commands": [
+                "src/commands"
+            ],
+            "@components/*": [
+                "src/components/*"
+            ],
+            "@components": [
+                "src/components"
+            ]
         },
-        "typeRoots": ["./src/types", "../../node_modules/@types"]
+        "typeRoots": [
+            "./src/types",
+            "../../node_modules/@types"
+        ]
     }
 }
