--- a/packages/create-refine-app/package.json
+++ b/packages/create-refine-app/package.json
@@ -32,7 +32,8 @@
     "dependencies": {
         "tslib": "^2.3.1",
         "commander": "9.4.1",
-        "execa": "^5.1.1"
+        "execa": "^5.1.1",
+        "superplate-cli": "^1.9.6"
     },
     "author": "refine",
     "license": "MIT",
