feat(cli): rewrite caching logic

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/react-hooks": "^8.0.0",
         "@testing-library/user-event": "^14.1.1",
+        "@types/crypto-js": "^4.1.1",
         "@types/fs-extra": "^9.0.13",
         "@types/inquirer": "^8.2.5",
         "@types/jest": "^26.0.24",
@@ -35,6 +36,7 @@
         "chalk": "^4.1.2",
         "commander": "9.4.1",
         "conf": "^10.2.0",
+        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "execa": "^5.1.1",
         "ink": "^3.2.0",
