--- a/packages/create-refine-app/package.json
+++ b/packages/create-refine-app/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@pankod/refine-cli",
-    "version": "0.6.0",
+    "name": "create-refine-app",
+    "version": "1.0.0",
     "description": "refine is a React-based framework for building internal tools, rapidly. It ships with Ant Design System, an enterprise-level UI toolkit.",
     "private": false,
     "main": "dist/index.js",
@@ -12,14 +12,12 @@
         "test": "jest --passWithNoTests --runInBand",
         "prepare": "npm run build"
     },
+    "bin": "./dist/index.js",
     "devDependencies": {
         "@esbuild-plugins/node-resolve": "^0.1.4",
-        "@types/fs-extra": "^9.0.13",
-        "@types/inquirer": "^8.2.5",
         "@types/jest": "^26.0.24",
-        "@types/lodash": "^4.14.171",
-        "@types/temp": "^0.9.1",
-        "@types/jscodeshift": "^0.11.5",
+        "esbuild-copy-static-files": "^0.1.0",
+        "esbuild-plugin-inline-image": "^0.0.8",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
@@ -27,21 +25,9 @@
     },
     "dependencies": {
         "tslib": "^2.3.1",
-        "handlebars": "^4.7.7",
-        "fs-extra": "^10.1.0",
-        "temp": "^0.9.4",
-        "pluralize": "^8.0.0",
-        "chalk": "^4.1.2",
         "commander": "9.4.1",
         "execa": "^5.1.1",
-        "ink": "^3.2.0",
-        "ink-table": "^3.0.0",
-        "inquirer": "^8.2.5",
-        "ora": "^5.4.1",
-        "preferred-pm": "^3.0.3",
-        "react": "^18.0.0",
-        "jscodeshift": "^0.14.0",
-        "semver-diff": "^3.1.1"
+        "superplate-cli": "^1.9.6"
     },
     "author": "refine",
     "license": "MIT",
