--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "lerna": "lerna",
     "start": "lerna run start --stream --parallel --scope @pankod/refine-core",
-    "test": "lerna run test --stream --scope @pankod/refine*",
+    "test": "lerna run test --stream --scope @pankod/refine* --scope refine-create-app",
     "test:coverage": "npm run test --stream -- -- -- --coverage",
-    "bootstrap": "cd packages/codemod && npm ci && cd ../.. && lerna bootstrap --hoist --strict  --ignore @pankod/refine-codemod --ignore @pankod/refine-react-router --scope @pankod/refine*",
+    "bootstrap": "cd packages/codemod && npm ci && cd ../.. && lerna bootstrap --hoist --strict  --ignore @pankod/refine-codemod --ignore @pankod/refine-react-router --scope @pankod/refine* --scope refine-create-app",
     "lint": "eslint -c ./.eslintrc packages examples",
     "lint:fix": "npm run lint -- --quiet --fix",
     "lint:staged": "lint-staged",
-    "build": "lerna run build --ignore @pankod/refine-react-router --scope @pankod/refine*",
+    "build": "lerna run build --ignore @pankod/refine-react-router --scope @pankod/refine* --scope refine-create-app",
     "start:docs": "concurrently \"cd documentation && npm run start\" \"npm run start -- --scope @pankod/refine-live-previews\" --names docs,live --prefix-colors blue,red",
     "nuke:node_modules": "echo 'Removing all node_modules'; find . -name 'node_modules' -type d -prune -not -path './documentation/*' -exec rm -rf '{}' +",
     "nuke:builds": "echo 'Removing all builds/dists'; find ./packages -name 'dist' -type d -prune -not -path './documentation/*' -not -path '*/node_modules/*' -exec rm -rf '{}' +",
