chore(swizzle): add test `refine.config.js` to antd and mantine

--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -23,6 +23,7 @@
         "@types/react-dom": "^17.0.0 || ^18.0.0"
     },
     "devDependencies": {
+        "@pankod/refine-cli": "^1.1.1",
         "@pankod/refine-ui-tests": "^0.11.0",
         "@pankod/refine-core": "^3.88.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
