--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -13,6 +13,7 @@
         "prepare": "npm run build"
     },
     "peerDependencies": {
+        "@pankod/refine-cli": "^1.1.1",
         "@pankod/refine-core": "^3.58.3",
         "@mantine/core": "^5.5.6",
         "@mantine/hooks": "^5.5.6",
