--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,7 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "globby": "^11.1.0",
         "tslib": "^2.3.1",
         "handlebars": "^4.7.7",
         "fs-extra": "^10.1.0",
