chore(cli): enable down level

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,43 +1,23 @@
 {
-    "include": [
-        "src"
-    ],
+    "include": ["src"],
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
         "rootDir": "./src",
         "baseUrl": ".",
         "allowSyntheticDefaultImports": true,
         "importHelpers": false,
+        "downlevelIteration": true,
         "strict": true,
         "paths": {
-            "@definitions/*": [
-                "src/definitions/*"
-            ],
-            "@definitions": [
-                "src/definitions"
-            ],
-            "@utils/*": [
-                "src/utils/*"
-            ],
-            "@utils": [
-                "src/utils"
-            ],
-            "@commands/*": [
-                "src/commands/*"
-            ],
-            "@commands": [
-                "src/commands"
-            ],
-            "@components/*": [
-                "src/components/*"
-            ],
-            "@components": [
-                "src/components"
-            ]
+            "@definitions/*": ["src/definitions/*"],
+            "@definitions": ["src/definitions"],
+            "@utils/*": ["src/utils/*"],
+            "@utils": ["src/utils"],
+            "@commands/*": ["src/commands/*"],
+            "@commands": ["src/commands"],
+            "@components/*": ["src/components/*"],
+            "@components": ["src/components"]
         },
-        "typeRoots": [
-            "./src/types",
-            "../../node_modules/@types"
-        ]
+        "typeRoots": ["./src/types", "../../node_modules/@types"]
     }
 }
