docs(blog): add react strict mode post

--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -164,3 +164,9 @@ chidume_nnamdi:
     title: Software Engineer
     url: https://github.com/philipszdavido
     image_url: https://github.com/philipszdavido.png
+
+deborah_emeni:
+    name: Deborah Emeni
+    title: Software Engineer
+    url: https://github.com/debemenitammy
+    image_url: https://github.com/debemenitammy.png
