--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@esbuild-plugins/node-resolve": "^0.1.4",
+        "@pankod/refine-cli": "^1.1.1",
         "@pankod/refine-core": "^3.88.4",
         "@pankod/refine-ui-tests": "^0.11.0",
         "@testing-library/jest-dom": "^5.16.4",
