--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -13,6 +13,7 @@
         "prepare": "npm run build"
     },
     "peerDependencies": {
+        "@pankod/refine-cli": "^1.1.1",
         "@pankod/refine-core": "^3.86.2",
         "@chakra-ui/react": "^2.3.6",
         "dayjs": "^1.10.7",
@@ -20,6 +21,7 @@
         "react-dom": "^17.0.0 || ^18.0.0"
     },
     "devDependencies": {
+        "@pankod/refine-cli": "^1.1.1",
         "@pankod/refine-ui-tests": "^0.11.2",
         "@pankod/refine-core": "^3.88.4",
         "@esbuild-plugins/node-resolve": "^0.1.4",
