chore: add some fun

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,7 +25,8 @@
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "figlet": "^1.5.2"
     },
     "dependencies": {
         "tslib": "^2.3.1",
