--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,34 +17,40 @@
     },
     "devDependencies": {
         "@esbuild-plugins/node-resolve": "^0.1.4",
+        "@types/envinfo": "^7.8.1",
         "@types/fs-extra": "^9.0.13",
         "@types/inquirer": "^8.2.5",
         "@types/jest": "^26.0.24",
-        "@types/temp": "^0.9.1",
         "@types/jscodeshift": "^0.11.5",
+        "@types/node-fetch": "^2.6.2",
+        "@types/temp": "^0.9.1",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
         "tsup": "^5.11.13",
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "tslib": "^2.3.1",
-        "handlebars": "^4.7.7",
-        "fs-extra": "^10.1.0",
-        "temp": "^0.9.4",
-        "pluralize": "^8.0.0",
         "chalk": "^4.1.2",
         "commander": "9.4.1",
         "conf": "^10.2.0",
         "dotenv": "^16.0.3",
+        "envinfo": "^7.8.1",
         "execa": "^5.1.1",
+        "fs-extra": "^10.1.0",
+        "handlebars": "^4.7.7",
         "ink": "^3.2.0",
         "ink-table": "^3.0.0",
         "inquirer": "^8.2.5",
-        "ora": "^5.4.1",
-        "preferred-pm": "^3.0.3",
         "jscodeshift": "^0.14.0",
-        "semver-diff": "^3.1.1"
+        "node-env-type": "^0.0.8",
+        "node-fetch": "^2.6.7",
+        "ora": "^5.4.1",
+        "os-name": "^4.0.1",
+        "pluralize": "^8.0.0",
+        "preferred-pm": "^3.0.3",
+        "semver-diff": "^3.1.1",
+        "temp": "^0.9.4",
+        "tslib": "^2.3.1"
     },
     "author": "refine",
     "license": "MIT",
