feat(swizzle): add `message` property with markdown support

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
     "devDependencies": {
         "@types/inquirer-autocomplete-prompt": "^2.0.0",
         "@esbuild-plugins/node-resolve": "^0.1.4",
+        "@types/dedent": "^0.7.0",
         "@types/figlet": "^1.5.5",
         "@types/envinfo": "^7.8.1",
         "@types/fs-extra": "^9.0.13",
@@ -34,6 +35,7 @@
     "dependencies": {
         "prettier": "^2.7.1",
         "inquirer-autocomplete-prompt": "^2.0.0",
+        "dedent": "^0.7.0",
         "globby": "^11.1.0",
         "figlet": "^1.5.2",
         "chalk": "^4.1.2",
@@ -46,6 +48,7 @@
         "handlebars": "^4.7.7",
         "ink": "^3.2.0",
         "ink-table": "^3.0.0",
+        "ink-markdown": "^1.0.1",
         "inquirer": "^8.2.5",
         "jscodeshift": "^0.14.0",
         "node-env-type": "^0.0.8",
