fix: tsconfig comma typo

--- a/packages/create-refine-app/tsconfig.json
+++ b/packages/create-refine-app/tsconfig.json
@@ -11,7 +11,7 @@
         "strict": true,
         "paths": {
             "@utils/*": ["src/utils/*"],
-            "@utils": ["src/utils"],
+            "@utils": ["src/utils"]
         },
         "typeRoots": [
             "./src/types",
