fix(simplerest): add `refine.config.js` to files

--- a/packages/simple-rest/package.json
+++ b/packages/simple-rest/package.json
@@ -8,7 +8,8 @@
   "private": false,
   "files": [
     "dist",
-    "src"
+    "src",
+    "./refine.config.js"
   ],
   "engines": {
     "node": ">=10"
